--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>755</width>
-    <height>581</height>
+    <height>493</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -48,13 +48,6 @@
   </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
-    </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="label_desc">
       <property name="sizePolicy">
@@ -99,37 +92,51 @@
      <widget class="QComboBox" name="cbx_relv_auth_name"/>
     </item>
     <item row="5" column="0">
-     <widget class="QLabel" name="label_schm_num">
+     <widget class="QLabel" name="label_reg_div">
       <property name="text">
-       <string>Scheme Number</string>
+       <string>Registration Division</string>
       </property>
      </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QLineEdit" name="lnedit_schm_num">
+     <widget class="QLineEdit" name="lnedit_reg_div">
       <property name="readOnly">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item row="6" column="0">
+     <widget class="QLabel" name="label_schm_num">
+      <property name="text">
+       <string>Scheme Number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLineEdit" name="lnedit_schm_num">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0">
      <widget class="QLabel" name="label_schm_name">
       <property name="text">
        <string>Scheme Name</string>
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="7" column="1">
      <widget class="QLineEdit" name="lnedit_schm_nam"/>
     </item>
-    <item row="7" column="0">
+    <item row="8" column="0">
      <widget class="QLabel" name="label_date_apprv">
       <property name="text">
        <string>Date of Approval</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="1">
+    <item row="8" column="1">
      <widget class="QDateEdit" name="date_apprv">
       <property name="minimumDate">
        <date>
@@ -143,14 +150,14 @@
       </property>
      </widget>
     </item>
-    <item row="8" column="0">
+    <item row="9" column="0">
      <widget class="QLabel" name="label_date_establish">
       <property name="text">
        <string>Date of Esablishment</string>
       </property>
      </widget>
     </item>
-    <item row="8" column="1">
+    <item row="9" column="1">
      <widget class="QDateEdit" name="date_establish">
       <property name="minimumDate">
        <date>
@@ -164,35 +171,25 @@
       </property>
      </widget>
     </item>
-    <item row="9" column="0">
+    <item row="10" column="0">
      <widget class="QLabel" name="label_lro">
       <property name="text">
        <string>Land Rights Office</string>
       </property>
      </widget>
     </item>
-    <item row="9" column="1">
+    <item row="10" column="1">
      <widget class="QComboBox" name="cbx_lro"/>
     </item>
-    <item row="10" column="0">
+    <item row="11" column="0">
      <widget class="QLabel" name="label_twn_name">
       <property name="text">
        <string>Township Name</string>
       </property>
      </widget>
     </item>
-    <item row="10" column="1">
-     <widget class="QLineEdit" name="lnedit_twnshp"/>
-    </item>
-    <item row="11" column="0">
-     <widget class="QLabel" name="label_reg_div">
-      <property name="text">
-       <string>Registration Division</string>
-      </property>
-     </widget>
-    </item>
     <item row="11" column="1">
-     <widget class="QComboBox" name="cbx_reg_div"/>
+     <widget class="QLineEdit" name="lnedit_twnshp"/>
     </item>
     <item row="12" column="0">
      <widget class="QLabel" name="label_blck_area">
@@ -210,6 +207,13 @@
        <double>10000000.000000000000000</double>
       </property>
      </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
     </item>
    </layout>
   </widget>
