--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -48,6 +48,13 @@
   </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
+    </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="label_desc">
       <property name="sizePolicy">
@@ -99,11 +106,7 @@
      </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QLineEdit" name="lnedit_reg_div">
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="QComboBox" name="cbx_reg_div"/>
     </item>
     <item row="6" column="0">
      <widget class="QLabel" name="label_schm_num">
@@ -207,13 +210,6 @@
        <double>10000000.000000000000000</double>
       </property>
      </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
     </item>
    </layout>
   </widget>
