Include framework for viewing documents.

--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -276,13 +276,6 @@
     <string>Upload the supporting documents for the scheme</string>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification_3">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
-    </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="label_desc_3">
       <property name="sizePolicy">
@@ -314,23 +307,6 @@
       </property>
       <property name="margin">
        <number>1</number>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0" colspan="2">
-     <widget class="DocumentTableWidget" name="tbw_documents">
-      <property name="editTriggers">
-       <set>QAbstractItemView::NoEditTriggers</set>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::NoSelection</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_upld_multi">
-      <property name="text">
-       <string>Add multiple files from a source directory</string>
       </property>
      </widget>
     </item>
@@ -366,6 +342,37 @@
         <width>16</width>
         <height>16</height>
        </size>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_upld_multi">
+      <property name="text">
+       <string>Add multiple files from a source directory</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification_3">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
+    </item>
+    <item row="2" column="0" colspan="2">
+     <widget class="DocumentTableWidget" name="tbw_documents">
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::NoSelection</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0" colspan="2">
+     <widget class="QgsCollapsibleGroupBox" name="gp_preview_docs">
+      <property name="title">
+       <string>Preview Documents</string>
       </property>
      </widget>
     </item>
@@ -411,6 +418,12 @@
    <class>SchemeSummaryWidget</class>
    <extends>QTreeView</extends>
    <header>stdm.ui.customcontrols.scheme_summary_widget</header>
+  </customwidget>
+  <customwidget>
+   <class>QgsCollapsibleGroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>qgis.gui</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources>
