--- a/resources.qrc
+++ b/resources.qrc
@@ -16,6 +16,7 @@
     <file>images/icons/flts_database_designer.png</file>
     <file>images/icons/flts_certificate_print.png</file>
     <file>images/icons/flts_certificate_scan.png</file>
+    <file>images/icons/flts_content_auth.png</file>
     <file>images/icons/flts_scheme_establishment.png</file>
     <file>images/icons/flts_options.png</file>
     <file>images/icons/flts_password.png</file>
@@ -38,6 +39,7 @@
     <file>images/icons/flts_search_result.png</file>
     <file>images/icons/flts_settings.png</file>
     <file>images/icons/flts_success.png</file>
+    <file>images/icons/flts_users_manage.png</file>
     <file>images/icons/flts_validate.png</file>
     <file>images/icons/mobile_collect.png</file>
     <file>images/icons/mobile_data_management.png</file>
