--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -328,34 +328,27 @@
   </widget>
   <widget class="QWizardPage" name="wizardPage2">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification_holders">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_desc_2">
-      <property name="text">
-       <string>Select the Excel file containing holders information</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLineEdit" name="lnEdit_hld_path">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="1">
      <widget class="QPushButton" name="btn_brws_hld">
+      <property name="toolTip">
+       <string>Browse file</string>
+      </property>
       <property name="text">
-       <string>Browse...</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset resource="../../resources.qrc">
+        <normaloff>:/plugins/stdm/images/icons/flts_open_file.png</normaloff>:/plugins/stdm/images/icons/flts_open_file.png</iconset>
       </property>
       <property name="default">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="2">
+     <widget class="QLabel" name="label_desc_2">
+      <property name="text">
+       <string>Select the Excel or CSV file containing the holders information</string>
       </property>
      </widget>
     </item>
@@ -366,21 +359,36 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QPushButton" name="btn_validate_holders">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Validate</string>
+    <item row="2" column="0">
+     <widget class="QLineEdit" name="lnEdit_hld_path">
+      <property name="enabled">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="4" column="0" colspan="2">
-     <widget class="ExcelWorkbookView" name="tw_hld_prv"/>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pushButton">
+      <property name="toolTip">
+       <string>Reload file</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset resource="../../resources.qrc">
+        <normaloff>:/plugins/stdm/images/icons/update.png</normaloff>:/plugins/stdm/images/icons/update.png</iconset>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="3">
+     <layout class="QVBoxLayout" name="vlNotification_holders">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
+    </item>
+    <item row="4" column="0" colspan="3">
+     <widget class="HoldersTableView" name="tw_hld_prv"/>
     </item>
    </layout>
   </widget>
@@ -411,7 +419,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ExcelWorkbookView</class>
+   <class>HoldersTableView</class>
    <extends>QTableWidget</extends>
    <header>stdm.ui.customcontrols.table_widget</header>
   </customwidget>
