Restyle documents widgets.

--- a/resources.qrc
+++ b/resources.qrc
@@ -14,6 +14,7 @@
     <file>images/icons/flts_lodgement.png</file>
     <file>images/icons/flts_notification.png</file>
     <file>images/icons/flts_database_designer.png</file>
+    <file>images/icons/flts_delete.png</file>
     <file>images/icons/flts_certificate_print.png</file>
     <file>images/icons/flts_certificate_scan.png</file>
     <file>images/icons/flts_content_auth.png</file>
