--- a/ui/flts/workflow_manager/ui_workflow_manager.ui
+++ b/ui/flts/workflow_manager/ui_workflow_manager.ui
@@ -13,16 +13,19 @@
   <property name="windowTitle">
    <string>Workflow Manager</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_3">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QVBoxLayout" name="vlNotification"/>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QPushButton" name="approveButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Approve</string>
          </property>
@@ -30,15 +33,31 @@
        </item>
        <item>
         <widget class="QPushButton" name="disapproveButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Disapprove</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="saveButton">
+        <widget class="QPushButton" name="holdersButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Save</string>
+          <string>Holders</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="documentsButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Documents</string>
          </property>
         </widget>
        </item>
@@ -49,7 +68,7 @@
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>98</width>
+           <width>178</width>
            <height>20</height>
           </size>
          </property>
@@ -57,6 +76,9 @@
        </item>
        <item>
         <widget class="QLineEdit" name="searchEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="placeholderText">
           <string>Type to search...</string>
          </property>
@@ -64,6 +86,9 @@
        </item>
        <item>
         <widget class="QComboBox" name="filterComboBox">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <item>
           <property name="text">
            <string>Apply Filter</string>
@@ -73,6 +98,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="searchButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Search</string>
          </property>
@@ -95,9 +123,12 @@
       </widget>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="paginationLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="firstButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>First</string>
          </property>
@@ -105,6 +136,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="previousButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Previous</string>
          </property>
@@ -122,6 +156,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="nextButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Next</string>
          </property>
@@ -129,6 +166,9 @@
        </item>
        <item>
         <widget class="QPushButton" name="lastButton">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Last</string>
          </property>
