--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -364,10 +364,13 @@
       <property name="enabled">
        <bool>true</bool>
       </property>
+      <property name="placeholderText">
+       <string>Path to the Holders Excel or CSV file...</string>
+      </property>
      </widget>
     </item>
     <item row="2" column="2">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="btn_reload_holders">
       <property name="toolTip">
        <string>Reload file</string>
       </property>
