--- a/ui/flts/workflow_manager/ui_comment_manager.ui
+++ b/ui/flts/workflow_manager/ui_comment_manager.ui
@@ -14,6 +14,15 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_3">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="4,6">
      <item>
@@ -28,6 +37,9 @@
         <bool>false</bool>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QTextEdit" name="newCommentTextEdit"/>
         </item>
@@ -64,11 +76,30 @@
         <string>Review Comments</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="leftMargin">
+         <number>9</number>
+        </property>
+        <property name="topMargin">
+         <number>9</number>
+        </property>
+        <property name="rightMargin">
+         <number>9</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QTextEdit" name="oldCommentTextEdit"/>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4"/>
+         <widget class="QFrame" name="paginationFrame">
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
