Added custom QMessageBox

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,6 +4,7 @@
     <file>images/icons/flts_back_action.png</file>
     <file>images/icons/flts_certificate.png</file>
     <file>images/icons/flts_comment_reply.png</file>
+    <file>images/icons/flts_comment_reply_2.png</file>
     <file>images/icons/flts_document_view.png</file>
     <file>images/icons/flts_approve.png</file>
     <file>images/icons/flts_disapprove.png</file>
