--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="/plugins/stdm">
     <file>images/icons/flts_about.png</file>
+    <file>images/icons/flts2.png</file>
     <file>images/icons/flts_back_action.png</file>
     <file>images/icons/flts_certificate.png</file>
     <file>images/icons/flts_password_change.png</file>
