--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -165,7 +165,7 @@
     <item row="8" column="0">
      <widget class="QLabel" name="label_date_apprv">
       <property name="text">
-       <string>Date of Approval</string>
+       <string>Date of Approval (RA)</string>
       </property>
      </widget>
     </item>
@@ -227,7 +227,7 @@
     <item row="9" column="0">
      <widget class="QLabel" name="label_date_establish">
       <property name="text">
-       <string>Date of Establishment</string>
+       <string>Date of Establishment (RoD)</string>
       </property>
      </widget>
     </item>
