--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -48,19 +48,6 @@
   </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
-    <property name="verticalSpacing">
-     <number>10</number>
-    </property>
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
-    </item>
-    <item row="2" column="1">
-     <widget class="QComboBox" name="cbx_region"/>
-    </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="label_desc">
       <property name="sizePolicy">
@@ -74,13 +61,6 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_rel_auth_type">
-      <property name="text">
-       <string>Type of Relevant Authority</string>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_region">
       <property name="text">
@@ -88,13 +68,67 @@
       </property>
      </widget>
     </item>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="cbx_region"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_rel_auth_type">
+      <property name="text">
+       <string>Type of Relevant Authority</string>
+      </property>
+     </widget>
+    </item>
     <item row="3" column="1">
      <widget class="QComboBox" name="cbx_relv_auth"/>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_rel_auth_name">
+      <property name="text">
+       <string>Name of Relevant Authority</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QComboBox" name="cbx_relv_auth_name"/>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_reg_div">
+      <property name="text">
+       <string>Registration Division</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QComboBox" name="cbx_reg_div"/>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="label_schm_num">
+      <property name="text">
+       <string>Scheme Number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLineEdit" name="lnedit_schm_num">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
     </item>
     <item row="7" column="0">
      <widget class="QLabel" name="label_schm_name">
       <property name="text">
        <string>Scheme Name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="1">
+     <widget class="QLineEdit" name="lnedit_schm_nam"/>
+    </item>
+    <item row="8" column="0">
+     <widget class="QLabel" name="label_date_apprv">
+      <property name="text">
+       <string>Date of Approval (RA)</string>
       </property>
      </widget>
     </item>
@@ -122,57 +156,10 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_rel_auth_name">
+    <item row="9" column="0">
+     <widget class="QLabel" name="label_date_establish">
       <property name="text">
-       <string>Name of Relevant Authority</string>
-      </property>
-     </widget>
-    </item>
-    <item row="11" column="1">
-     <widget class="QLineEdit" name="lnedit_twnshp"/>
-    </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="cbx_reg_div"/>
-    </item>
-    <item row="11" column="0">
-     <widget class="QLabel" name="label_twn_name">
-      <property name="text">
-       <string>Township Name</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="1">
-     <widget class="QLineEdit" name="lnedit_schm_nam"/>
-    </item>
-    <item row="5" column="0">
-     <widget class="QLabel" name="label_reg_div">
-      <property name="text">
-       <string>Registration Division</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QComboBox" name="cbx_relv_auth_name"/>
-    </item>
-    <item row="6" column="1">
-     <widget class="QLineEdit" name="lnedit_schm_num">
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="0">
-     <widget class="QLabel" name="label_date_apprv">
-      <property name="text">
-       <string>Date of Approval (RA)</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0">
-     <widget class="QLabel" name="label_schm_num">
-      <property name="text">
-       <string>Scheme Number</string>
+       <string>Date of Establishment (RoD)</string>
       </property>
      </widget>
     </item>
@@ -207,10 +194,23 @@
       </property>
      </widget>
     </item>
+    <item row="10" column="1">
+     <widget class="QComboBox" name="cbx_lro"/>
+    </item>
+    <item row="11" column="0">
+     <widget class="QLabel" name="label_twn_name">
+      <property name="text">
+       <string>Township Name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="1">
+     <widget class="QLineEdit" name="lnedit_twnshp"/>
+    </item>
     <item row="12" column="0">
      <widget class="QLabel" name="label_blck_area">
       <property name="text">
-       <string>Block Area</string>
+       <string>Block Area (Hectares)</string>
       </property>
      </widget>
     </item>
@@ -224,15 +224,29 @@
       </property>
      </widget>
     </item>
-    <item row="9" column="0">
-     <widget class="QLabel" name="label_date_establish">
+    <item row="13" column="0">
+     <widget class="QLabel" name="label_num_plots">
       <property name="text">
-       <string>Date of Establishment (RoD)</string>
+       <string>Number of Plots</string>
       </property>
      </widget>
     </item>
-    <item row="10" column="1">
-     <widget class="QComboBox" name="cbx_lro"/>
+    <item row="13" column="1">
+     <widget class="QDoubleSpinBox" name="dbl_spinbx_num_plots">
+      <property name="decimals">
+       <number>0</number>
+      </property>
+      <property name="maximum">
+       <double>200.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
     </item>
    </layout>
   </widget>
