--- a/ui/flts/ui_scheme_lodgement.ui
+++ b/ui/flts/ui_scheme_lodgement.ui
@@ -48,6 +48,13 @@
   </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0" colspan="2">
+     <layout class="QVBoxLayout" name="vlNotification">
+      <property name="bottomMargin">
+       <number>10</number>
+      </property>
+     </layout>
+    </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="label_desc">
       <property name="sizePolicy">
@@ -116,23 +123,51 @@
      </widget>
     </item>
     <item row="7" column="0">
+     <widget class="QLabel" name="label_sg_num">
+      <property name="text">
+       <string>SG/General Plan Number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="1">
+     <widget class="QLineEdit" name="lnedit_sg_num">
+      <property name="readOnly">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0">
+     <widget class="QLabel" name="label_const_ref_num">
+      <property name="text">
+       <string>Constitution Ref. Number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="1">
+     <widget class="QLineEdit" name="lnedit_const_ref_num">
+      <property name="readOnly">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="0">
      <widget class="QLabel" name="label_schm_name">
       <property name="text">
        <string>Scheme Name</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="1">
+    <item row="9" column="1">
      <widget class="QLineEdit" name="lnedit_schm_nam"/>
     </item>
-    <item row="8" column="0">
+    <item row="10" column="0">
      <widget class="QLabel" name="label_date_apprv">
       <property name="text">
        <string>Date of Approval (RA)</string>
       </property>
      </widget>
     </item>
-    <item row="8" column="1">
+    <item row="10" column="1">
      <widget class="QDateEdit" name="date_apprv">
       <property name="minimumDateTime">
        <datetime>
@@ -156,14 +191,14 @@
       </property>
      </widget>
     </item>
-    <item row="9" column="0">
+    <item row="11" column="0">
      <widget class="QLabel" name="label_date_establish">
       <property name="text">
        <string>Date of Establishment (RoD)</string>
       </property>
      </widget>
     </item>
-    <item row="9" column="1">
+    <item row="11" column="1">
      <widget class="QDateEdit" name="date_establish">
       <property name="minimumDateTime">
        <datetime>
@@ -187,34 +222,34 @@
       </property>
      </widget>
     </item>
-    <item row="10" column="0">
+    <item row="12" column="0">
      <widget class="QLabel" name="label_lro">
       <property name="text">
        <string>Land Rights Office</string>
       </property>
      </widget>
     </item>
-    <item row="10" column="1">
+    <item row="12" column="1">
      <widget class="QComboBox" name="cbx_lro"/>
     </item>
-    <item row="11" column="0">
+    <item row="13" column="0">
      <widget class="QLabel" name="label_twn_name">
       <property name="text">
        <string>Township Name</string>
       </property>
      </widget>
     </item>
-    <item row="11" column="1">
+    <item row="13" column="1">
      <widget class="QLineEdit" name="lnedit_twnshp"/>
     </item>
-    <item row="12" column="0">
+    <item row="14" column="0">
      <widget class="QLabel" name="label_blck_area">
       <property name="text">
        <string>Block Area (Hectares)</string>
       </property>
      </widget>
     </item>
-    <item row="12" column="1">
+    <item row="14" column="1">
      <widget class="QDoubleSpinBox" name="dbl_spinbx_block_area">
       <property name="decimals">
        <number>4</number>
@@ -224,14 +259,14 @@
       </property>
      </widget>
     </item>
-    <item row="13" column="0">
+    <item row="15" column="0">
      <widget class="QLabel" name="label_num_plots">
       <property name="text">
        <string>Number of Plots</string>
       </property>
      </widget>
     </item>
-    <item row="13" column="1">
+    <item row="15" column="1">
      <widget class="QDoubleSpinBox" name="dbl_spinbx_num_plots">
       <property name="decimals">
        <number>0</number>
@@ -240,13 +275,6 @@
        <double>200.000000000000000</double>
       </property>
      </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <layout class="QVBoxLayout" name="vlNotification">
-      <property name="bottomMargin">
-       <number>10</number>
-      </property>
-     </layout>
     </item>
    </layout>
   </widget>
