Implemented GIZ-SLR suggestions

--- a/ui/flts/workflow_manager/ui_workflow_manager.ui
+++ b/ui/flts/workflow_manager/ui_workflow_manager.ui
@@ -27,7 +27,7 @@
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>Approve</string>
+          <string>Pass</string>
          </property>
         </widget>
        </item>
